examples/network-delay-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-delay
  namespace: sock-shop
spec:
  hosts:
  - user.sock-shop.svc.cluster.local
  http:
  - fault:
      # abort:
      #   httpStatus: 500
      #   percentage:
      #     value: 100
      delay:
        percentage:
          value: 100
        fixedDelay: 3s
    route:
    - destination:
        host: user.sock-shop.svc.cluster.local
